--- a/web/themes/custom/leap/sass/style.scss
+++ b/web/themes/custom/leap/sass/style.scss
@@ -8,6 +8,7 @@
 @import "base";
 @import "headings";
 @import "layout";
+@import "accessibility";
 
 /* Page - START
 *********************************/
