--- a/web/themes/custom/leap/sass/_headings.scss
+++ b/web/themes/custom/leap/sass/_headings.scss
@@ -83,7 +83,7 @@
     font-weight: 500;
     font-size: 0.875em;
     line-height: 1.75em;
-    color: #707D7A;
+    color: $gray;
 
     img {
       margin: 40px 0px;
