--- a/web/themes/custom/leap/sass/components/_form.scss
+++ b/web/themes/custom/leap/sass/components/_form.scss
@@ -113,7 +113,7 @@
     font-weight: 400;
     font-size: .875em;
     line-height: 1.75em;
-    color: #707D7A;
+    color: $gray;
     text-align: left;
     padding-top: 5px;
 
