--- a/web/themes/custom/leap/sass/components/_two-column-list.scss
+++ b/web/themes/custom/leap/sass/components/_two-column-list.scss
@@ -90,7 +90,7 @@
       font-weight: 400;
       font-size: .875em;
       line-height: 1.75em;
-      color: #707D7A;
+      //color: #707D7A;
       text-align: left;
 
     }
@@ -106,7 +106,7 @@
       font-weight: 800;
       font-size: 1em;
       text-align: left;
-      color: #E89B37;
+      color: $darkOrange;
       border-bottom: 1px solid #EBF0ED;
 
 
@@ -127,7 +127,7 @@
         font-weight: 400;
         font-size: .875em;
         line-height: 1.75em;
-        color: #707D7A;
+        color: $gray;
         text-align: left;
 
         &:before {
