--- a/web/themes/custom/leap/sass/components/_video.scss
+++ b/web/themes/custom/leap/sass/components/_video.scss
@@ -1,4 +1,5 @@
 div.video-background, .video-container-featured, .video-container-page {
+  background-color: $blackIsh;
 	position: relative;
 	overflow: hidden;
 	margin-bottom: 40px;
