Changed SiS homepage message hardcoded into video template

--- a/web/themes/custom/sis/templates/block--sis-backgroundvideo.html.twig
+++ b/web/themes/custom/sis/templates/block--sis-backgroundvideo.html.twig
@@ -7,7 +7,7 @@
 			<h2>GSK Science in the Summer&trade;</h2>
 		</div>
 		<div class="video-description">
-			<p>GSK Science in the Summer&trade; is a free summer science education program that aims to inspire the next generation of scientists and engineers.</p>
+			<p>Announcing the Be a Chemist Virtual Program launching July 2020!</p>
 		</div>
 	</div>
 
