--- a/web/themes/custom/leap/templates/node--basic-page.html.twig
+++ b/web/themes/custom/leap/templates/node--basic-page.html.twig
@@ -83,7 +83,7 @@
     </div>
   </div>
   <div class="basic-page">
-    {{ content.field_page_block }}
+    {{ content.field_page_blocks }}
   </div>
 
 
