Another bugfix in Basic Page template

--- a/web/themes/custom/leap/templates/node--basic-page.html.twig
+++ b/web/themes/custom/leap/templates/node--basic-page.html.twig
@@ -82,7 +82,7 @@
       {{ content.field_intro_body }}
     </div>
   </div>
-  <div class="basic-page">
+  <div class="basic-page-block">
     {{ content.field_page_blocks }}
   </div>
 
