--- a/web/themes/custom/leap/sass/components/_basic-page.scss
+++ b/web/themes/custom/leap/sass/components/_basic-page.scss
@@ -78,6 +78,7 @@
     margin-bottom: 25px;
     margin-left: 2em;
     color: $purple;
+    line-height: em(30);
   }
   ul {
     list-style-type: disc;
