--- a/web/themes/custom/leap/sass/_blocks.scss
+++ b/web/themes/custom/leap/sass/_blocks.scss
@@ -1,4 +1,4 @@
-.main-page-content {
+//.main-page-content {
   .intro-text p, .contact-us p {
     max-width: 650px;
     margin: 0 auto;
@@ -13,9 +13,9 @@
     font-weight: 400;
     font-size: 1.375em;
     line-height: 1.875em;
-    color: #6F6F6F;
+    color: $lightGray2;
   }
-}
+//}
 
 .block-suggestedmaterials {
   iframe {
@@ -386,4 +386,11 @@
   .block:last-of-type {
     margin-bottom: 100px;
   }
+}
+
+.block-box {
+  border: 4px solid $lightGray3;
+  border-radius: 20px;
+  padding: 20px;
+  margin-bottom: 30px; 
 }
