Updated Drupal core

--- a/web/themes/custom/leap/sass/_blocks.scss
+++ b/web/themes/custom/leap/sass/_blocks.scss
@@ -1,4 +1,4 @@
-//.main-page-content {
+.main-page-content {
   .intro-text p, .contact-us p {
     max-width: 650px;
     margin: 0 auto;
@@ -15,7 +15,7 @@
     line-height: 1.875em;
     color: $lightGray2;
   }
-//}
+}
 
 .block-suggestedmaterials {
   iframe {
