--- a/web/themes/custom/leap/css/legacy.css
+++ b/web/themes/custom/leap/css/legacy.css
@@ -329,7 +329,7 @@ dl dd {
 
 /* Images
 *********************************/
-img {
+.content-wrapper img {
   width: 100%;
   max-width: 100%;
   height: auto;
