--- a/web/themes/custom/leap/sass/_base.scss
+++ b/web/themes/custom/leap/sass/_base.scss
@@ -240,7 +240,7 @@ dl {
 }
 /* Images
 *********************************/
-img {
+.content-wrapper img {
   width:100%;
   max-width: 100%;
   height: auto;
