--- a/web/themes/custom/sis/sass/_nav.sass
+++ b/web/themes/custom/sis/sass/_nav.sass
@@ -9,8 +9,9 @@
         a 
           color: #383838
       li:last-child 
-        a.sub-menu
-          color: $white
+        background-color: $lightOrange
+        // a.sub-menu
+        //   color: $white
 
 
 
