--- a/web/themes/custom/sis/sass/_colors.sass
+++ b/web/themes/custom/sis/sass/_colors.sass
@@ -12,8 +12,8 @@ $lightOrange: #EEA32D
 .color-theme-block
   display: block
   position: relative
-  height: 500px
-  margin-bottom: -400px
+  height: 200px
+  margin-bottom: -150px
   .color-theme-blue &
     background-color: $blue
   .color-theme-green &
@@ -22,6 +22,15 @@ $lightOrange: #EEA32D
     background-color: $magenta
   .color-theme-teal &
     background-color: $teal
+
+@media (min-width: 768px)
+  .color-theme-block
+    height: 300px
+    margin-bottom: -250px 
+@media (min-width: 992px)
+  .color-theme-block
+    height: 500px
+    margin-bottom: -400px   
 
 
 h2,h3
