--- a/web/themes/custom/sis/sass/_colors.sass
+++ b/web/themes/custom/sis/sass/_colors.sass
@@ -32,8 +32,18 @@ $lightOrange: #EEA32D
     height: 500px
     margin-bottom: -400px   
 
+.block,
+.main-page-content    
+  h2,h3 
+    color: $teal
 
-h2,h3
+.main-page-content 
+  .intro-text p, .contact-us p 
+    color: $orange
+
+
+.color-match,
+.intro-text.color-match p
   .color-theme-blue &
     color: $blue
   .color-theme-green &
@@ -41,9 +51,4 @@ h2,h3
   .color-theme-magenta &
     color: $magenta   
   .color-theme-teal &
-    color: $teal     
-
-
-.main-page-content 
-  .intro-text p, .contact-us p 
-    color: $orange
+    color: $teal  
