--- a/web/themes/custom/sis/templates/block--views-block--scientist-menu-block-1.html.twig
+++ b/web/themes/custom/sis/templates/block--views-block--scientist-menu-block-1.html.twig
@@ -4,7 +4,7 @@
  * 
  */
 #}
-<div{{ attributes.addClass('block scientist-menu') }}>
+<div{{ attributes.addClass('block') }}>
   <div class="center-icon">
   	<img class="no-stretch down-arrow" alt="down arrow" src="/{{ directory }}/images/arrow.png">
   </div>
