--- a/web/themes/custom/sis/sass/_scientist.sass
+++ b/web/themes/custom/sis/sass/_scientist.sass
@@ -9,3 +9,18 @@
 
 .down-arrow
   margin-bottom: 40px
+
+.node-scientist
+  h3.color-match
+    font-weight: 900
+    font-size: 38px
+    line-height: 48px
+    margin-bottom: 20px
+  .paragraph
+    margin-top: 60px
+    margin-bottom: 60px
+    margin-left: 200px
+    h3.color-match,
+    .video-container-page
+      width: 70%
+
