--- a/web/themes/custom/sis/sass/_overrides.sass
+++ b/web/themes/custom/sis/sass/_overrides.sass
@@ -1,3 +1,15 @@
+.button
+  color: $white
+  border-radius: 0px
+  background-color: $orange
+  font-family: $gotham
+  font-weight: 600
+  font-size: 11px
+  letter-spacing: 0.1875em
+  padding: 15px 20px
+  text-transform: uppercase
+
+
 a.button,
 input[type="button"],
 input[type="submit"],
@@ -22,4 +34,7 @@ a.button
 img.no-stretch
   width: auto
 
+
+.main-page-content a 
+  color: $orange
 
