--- a/web/themes/custom/sis/sass/_video.sass
+++ b/web/themes/custom/sis/sass/_video.sass
@@ -6,15 +6,15 @@ div.video-background, .video-container-featured, .video-container-page
     top: 40%
   
   .button
-    color: $white
-    border-radius: 0px
-    background-color: $orange
-    font-family: $gotham
-    font-weight: 600
-    font-size: 11px
-    letter-spacing: 0.1875em
-    padding: 15px 20px
-    text-transform: uppercase
+    // color: $white
+    // border-radius: 0px
+    // background-color: $orange
+    // font-family: $gotham
+    // font-weight: 600
+    // font-size: 11px
+    // letter-spacing: 0.1875em
+    // padding: 15px 20px
+    // text-transform: uppercase
     z-index: 3
     position: absolute
     bottom: 30%
