--- a/web/themes/custom/sis/sass/_scientist.sass
+++ b/web/themes/custom/sis/sass/_scientist.sass
@@ -16,11 +16,58 @@
     font-size: 38px
     line-height: 48px
     margin-bottom: 20px
-  .paragraph
+  .paragraph--type--video,
+  .paragraph--type--instructions,
+  .paragraph--type--schedule
     margin-top: 60px
     margin-bottom: 60px
     margin-left: 200px
     h3.color-match,
     .video-container-page
       width: 70%
+  .field--name-field-steps
+    margin-bottom: 100px
+
+
+.instructions-flex
+  display: flex
+  ul 
+    list-style-type: disc
+    margin-left: 1.25em
+    margin-bottom: 2em
+  a 
+    font-weight: bold
+
+.paragraph--type--schedule 
+  img
+    width: 50%
+    float: left 
+    margin-right: 30px  
+
+.field--name-field-events
+  display: flex
+  clear: both
+  margin-top: 40px
+  .field__item
+    max-width: 80%
+    display: block
+    a 
+      @extend .button
+  .field--name-field-date
+    margin-top: 50px
+  .field--name-field-block-link
+    margin-top: 30px
+
+.field--name-field-materials
+  margin-left: 30px
+  white-space: nowrap
+  .field__label
+    font-style: normal
+    font-weight: 900
+    font-size: 16px
+    line-height: 140%
+    text-transform: uppercase
+    margin-bottom: 1em
+  li 
+    margin-bottom: 0.5em
 
