--- a/web/themes/custom/sis/sass/_overrides.sass
+++ b/web/themes/custom/sis/sass/_overrides.sass
@@ -38,3 +38,12 @@ img.no-stretch
 .main-page-content a 
   color: $orange
 
+.sr-only 
+  position: absolute
+  width: 1px
+  height: 1px
+  padding: 0
+  margin: -1px
+  overflow: hidden
+  clip: rect(0,0,0,0)
+  border: 0
