--- a/web/themes/custom/sis/css/style.css
+++ b/web/themes/custom/sis/css/style.css
@@ -192,6 +192,11 @@ div.video-background .button, div.video-background .field--name-field-events .fi
 .scientist-menu .views-view-grid .views-col {
   padding: 20px;
 }
+@media (max-width: 499px) {
+  .scientist-menu .views-view-grid .views-col {
+    width: 100% !important;
+  }
+}
 .scientist-menu .views-view-grid .views-col img {
   -webkit-box-shadow: 0 5px 10px 10px rgba(0, 0, 0, 0.2);
   box-shadow: 0 5px 10px 10px rgba(0, 0, 0, 0.2);
@@ -219,17 +224,30 @@ div.video-background .button, div.video-background .field--name-field-events .fi
 
 .node-scientist h3.color-match {
   font-weight: 900;
-  font-size: 38px;
-  line-height: 48px;
+  font-size: 24px;
+  line-height: 30px;
   margin-bottom: 20px;
+}
+@media (min-width: 992px) {
+  .node-scientist h3.color-match {
+    font-size: 38px;
+    line-height: 48px;
+  }
 }
 .node-scientist .paragraph--type--video,
 .node-scientist .paragraph--type--instructions,
 .node-scientist .paragraph--type--schedule {
   margin-top: 60px;
   margin-bottom: 60px;
-  margin-left: 200px;
+  margin-left: 85px;
   position: relative;
+}
+@media (min-width: 992px) {
+  .node-scientist .paragraph--type--video,
+.node-scientist .paragraph--type--instructions,
+.node-scientist .paragraph--type--schedule {
+    margin-left: 200px;
+  }
 }
 .node-scientist .paragraph--type--video h3.color-match,
 .node-scientist .paragraph--type--video .video-container-page,
@@ -257,14 +275,23 @@ div.video-background .button, div.video-background .field--name-field-events .fi
 .paragraph--type--video::before,
 .paragraph--type--instructions::before,
 .paragraph--type--schedule::before {
-  width: 105px;
+  width: 65px;
   padding: 10px 0;
   display: block;
   text-align: center;
   background-color: #EEA32D;
   border-radius: 100%;
   font-weight: 900;
-  font-size: 72px;
+  font-size: 36px;
+}
+@media (min-width: 992px) {
+  .numbering,
+.paragraph--type--video::before,
+.paragraph--type--instructions::before,
+.paragraph--type--schedule::before {
+    font-size: 72px;
+    width: 105px;
+  }
 }
 
 .scientist-video {
@@ -280,11 +307,23 @@ div.video-background .button, div.video-background .field--name-field-events .fi
 .paragraph--type--instructions::before,
 .paragraph--type--schedule::before {
   position: absolute;
-  left: -200px;
+  left: -85px;
+}
+@media (min-width: 992px) {
+  .paragraph--type--video::before,
+.paragraph--type--instructions::before,
+.paragraph--type--schedule::before {
+    left: -200px;
+  }
 }
 
 .instructions-flex {
-  display: flex;
+  display: block;
+}
+@media (min-width: 992px) {
+  .instructions-flex {
+    display: flex;
+  }
 }
 .instructions-flex ul {
   list-style-type: disc;
@@ -301,13 +340,18 @@ div.video-background .button, div.video-background .field--name-field-events .fi
 .instructions-docs .documents-wrapper .document-icon-wrapper {
   flex: 1 0 auto;
   display: block;
-  width: 150px;
+  width: 75px;
   height: 195px;
   margin-right: 30px;
   margin-bottom: 50px;
   background-image: url("../images/document-guide-theme-blue.png");
   background-repeat: no-repeat;
   background-size: contain;
+}
+@media (min-width: 992px) {
+  .instructions-docs .documents-wrapper .document-icon-wrapper {
+    width: 150px;
+  }
 }
 .color-theme-green .instructions-docs .documents-wrapper .document-icon-wrapper {
   background-image: url("../images/document-guide-theme-green.png");
@@ -335,15 +379,25 @@ div.video-background .button, div.video-background .field--name-field-events .fi
 }
 
 .paragraph--type--schedule img {
-  width: 50%;
-  float: left;
-  margin-right: 30px;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .paragraph--type--schedule img {
+    width: 50%;
+    float: left;
+    margin-right: 30px;
+  }
 }
 
 .field--name-field-events {
-  display: flex;
+  display: block;
   clear: both;
   margin-top: 40px;
+}
+@media (min-width: 768px) {
+  .field--name-field-events {
+    display: flex;
+  }
 }
 .field--name-field-events .field__item {
   max-width: 80%;
@@ -356,9 +410,11 @@ div.video-background .button, div.video-background .field--name-field-events .fi
   margin-top: 30px;
 }
 
-.field--name-field-materials {
-  margin-left: 30px;
-  white-space: nowrap;
+@media (min-width: 992px) {
+  .field--name-field-materials {
+    margin-left: 30px;
+    white-space: nowrap;
+  }
 }
 .field--name-field-materials .field__label {
   font-style: normal;
