--- a/web/themes/custom/sis/sass/_scientist.sass
+++ b/web/themes/custom/sis/sass/_scientist.sass
@@ -1,6 +1,8 @@
 .scientist-menu
   .views-view-grid .views-col
     padding: 20px
+    @media (max-width: 499px)
+      width: 100% !important
     img
       //display: block
       -webkit-box-shadow: 0 5px 10px 10px rgba(0,0,0,.2)
@@ -29,16 +31,21 @@
 .node-scientist
   h3.color-match
     font-weight: 900
-    font-size: 38px
-    line-height: 48px
+    font-size: 24px
+    line-height: 30px
     margin-bottom: 20px
+    @media (min-width: 992px)
+      font-size: 38px
+      line-height: 48px
   .paragraph--type--video,
   .paragraph--type--instructions,
   .paragraph--type--schedule
     margin-top: 60px
     margin-bottom: 60px
-    margin-left: 200px
+    margin-left: 85px
     position: relative
+    @media (min-width: 992px)
+      margin-left: 200px
     h3.color-match,
     .video-container-page
       width: 70%
@@ -58,14 +65,17 @@
 .paragraph--type--video::before,
 .paragraph--type--instructions::before,
 .paragraph--type--schedule::before
-  width: 105px
+  width: 65px
   padding: 10px 0
   display: block
   text-align: center
   background-color: $lightOrange
   border-radius: 100%
   font-weight: 900
-  font-size: 72px
+  font-size: 36px
+  @media (min-width: 992px)
+    font-size: 72px
+    width: 105px
 
 
 .scientist-video
@@ -79,11 +89,15 @@
 .paragraph--type--instructions::before,
 .paragraph--type--schedule::before
   position: absolute
-  left: -200px
+  left: -85px
+  @media (min-width: 992px)
+    left: -200px
 
 
 .instructions-flex
-  display: flex
+  display: block
+  @media (min-width: 992px)
+    display: flex
   ul 
     list-style-type: disc
     margin-left: 1.25em
@@ -97,13 +111,15 @@
     .document-icon-wrapper
       flex: 1 0 auto
       display: block
-      width: 150px
+      width: 75px
       height: 195px
       margin-right: 30px
       margin-bottom: 50px
       background-image: url('../images/document-guide-theme-blue.png')
       background-repeat: no-repeat
       background-size: contain
+      @media (min-width: 992px)
+        width: 150px
       .color-theme-green &
         background-image: url('../images/document-guide-theme-green.png')
       .color-theme-magenta &
@@ -127,14 +143,18 @@
 
 .paragraph--type--schedule 
   img
-    width: 50%
-    float: left 
-    margin-right: 30px  
+    width: 100%
+    @media (min-width: 768px)
+      width: 50%
+      float: left 
+      margin-right: 30px  
 
 .field--name-field-events
-  display: flex
+  display: block
   clear: both
   margin-top: 40px
+  @media (min-width: 768px)
+    display: flex
   .field__item
     max-width: 80%
     display: block
@@ -146,8 +166,9 @@
     margin-top: 30px
 
 .field--name-field-materials
-  margin-left: 30px
-  white-space: nowrap
+  @media (min-width: 992px)
+    margin-left: 30px
+    white-space: nowrap
   .field__label
     font-style: normal
     font-weight: 900
@@ -158,3 +179,7 @@
   li 
     margin-bottom: 0.5em
 
+
+
+  
+  
