--- a/web/themes/custom/sis/css/style.css
+++ b/web/themes/custom/sis/css/style.css
@@ -154,6 +154,8 @@ p {
 }
 .site-navigation nav.nav-site-main .menu li a {
   color: #383838;
+  margin: 0 15px;
+  font-size: 11px;
 }
 .site-navigation nav.nav-site-main .menu li:last-child {
   background-color: #EEA32D;
@@ -473,6 +475,9 @@ img.no-stretch {
 .main-page-content a {
   color: #F36633;
 }
+.main-page-content a.button, .main-page-content .field--name-field-events .field__item a, .field--name-field-events .field__item .main-page-content a {
+  color: #FFFFFF;
+}
 
 .sr-only {
   position: absolute;
@@ -483,6 +488,14 @@ img.no-stretch {
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
+}
+
+.block-page-title {
+  margin-top: 30px;
+}
+
+.partners-state-grouping h3 {
+  color: #272727;
 }
 
 /*# sourceMappingURL=style.css.map */
