--- a/web/themes/custom/sis/sass/_nav.sass
+++ b/web/themes/custom/sis/sass/_nav.sass
@@ -8,6 +8,8 @@
       li
         a 
           color: #383838
+          margin: 0 15px
+          font-size: 11px
       li:last-child 
         background-color: $lightOrange
         // a.sub-menu
