--- a/web/themes/custom/sis/sass/_overrides.sass
+++ b/web/themes/custom/sis/sass/_overrides.sass
@@ -37,6 +37,8 @@ img.no-stretch
 
 .main-page-content a 
   color: $orange
+  &.button
+    color: $white
 
 .sr-only 
   position: absolute
@@ -47,3 +49,9 @@ img.no-stretch
   overflow: hidden
   clip: rect(0,0,0,0)
   border: 0
+
+.block-page-title
+  margin-top: 30px
+
+.partners-state-grouping h3
+  color: #272727
