Added cleafix to correct spacing after scientist node content

--- a/web/themes/custom/sis/templates/node--scientist--full.html.twig
+++ b/web/themes/custom/sis/templates/node--scientist--full.html.twig
@@ -5,7 +5,7 @@
  *
  */
 #}
-<article{{ attributes.addClass('node-scientist') }}>
+<article{{ attributes.addClass('node-scientist clearfix') }}>
 
   <div{{ content_attributes }}>
     <div class="scientist-video">
