--- a/web/themes/custom/sis/templates/paragraph--video.html.twig
+++ b/web/themes/custom/sis/templates/paragraph--video.html.twig
@@ -11,7 +11,8 @@
     'paragraph',
     'paragraph--type--' ~ paragraph.bundle|clean_class,
     view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
-    not paragraph.isPublished() ? 'paragraph--unpublished'
+    not paragraph.isPublished() ? 'paragraph--unpublished',
+    'clearfix'
   ]
 %}
 {% block paragraph %}
