--- a/web/themes/custom/sis/templates/node--resource--featured.html.twig
+++ b/web/themes/custom/sis/templates/node--resource--featured.html.twig
@@ -108,7 +108,9 @@
       <div class="featured-body">
         {{ content.body }}
       </div>
-      <span class="action-link big"><a href={{ content.field_file[0] }} download>Download</a></span>
+      {% if content.field_file[0] %}
+        <span class="action-link big"><a href={{ content.field_file[0] }} download>Download</a></span>
+      {% endif %}
       {% if content.field_file2[0] %}
         <span class="action-link big"><a href={{ content.field_file2[0] }} download>descargar en espanol</a></span>
       {% endif %}
