--- a/web/themes/custom/leap/templates/node--resource--featured.html.twig
+++ b/web/themes/custom/leap/templates/node--resource--featured.html.twig
@@ -110,7 +110,7 @@
       </div>
       <span class="action-link big"><a href={{ content.field_file[0] }} download>Download</a></span>
       {% if content.field_file2[0] %}
-        <span class="action-link big"><a href={{ content.field_file2[0] }} download>descargar en espanol</a></span>
+        <span class="action-link big"><a href={{ content.field_file2[0] }} download>Descargar en español</a></span>
       {% endif %}
     </div>
   </div>
