--- a/web/themes/custom/sis/templates/node--resource--instructions.html.twig
+++ b/web/themes/custom/sis/templates/node--resource--instructions.html.twig
@@ -91,7 +91,7 @@
       <ul>
         <li class="file"><a href={{ content.field_file[0] }} download>Download in English</a></li>
         {% if content.field_file2[0] %}
-          <li class="file"><a href={{ content.field_file2[0] }} download>Descargar en Espanol</a></li>
+          <li class="file"><a href={{ content.field_file2[0] }} download>Descargar en español</a></li>
         {% endif %}
       </ul>
     </div>
