Implemented Mission2Mars custom backgrounds and main color scheme

--- a/web/themes/custom/mars/sass/_colors.sass
+++ b/web/themes/custom/mars/sass/_colors.sass
@@ -1,3 +1,11 @@
+// Mission2Mars brand colors
+$bright_red: #be241c
+$dark_red: #6f0c14
+$light_cream: #eee1d1
+$dark_cream: #e5cbd7
+$dark_blue: #171341
+$grey: #818386
+
 $magenta: #BA0E82
 $blue:    #485DAA
 $green:   #55A43D
@@ -35,11 +43,11 @@ $lightOrange: #EEA32D
 .block,
 .main-page-content    
   h2,h3 
-    color: $teal
+    color: $dark_red
 
 .main-page-content 
   .intro-text p, .contact-us p 
-    color: $orange
+    color: $dark_red
 
 
 .color-match,
