--- a/web/themes/custom/mars/sass/_header.sass
+++ b/web/themes/custom/mars/sass/_header.sass
@@ -1,7 +1,7 @@
 .main-page-heading
   text-align: center
   color: $white
-  background-color: $orange
+  background-color: $light_cream
   background-image: url('../images/bkgd_header.png')
   background-position: center
   background-repeat: no-repeat
