--- a/web/themes/custom/mars/sass/_nav.sass
+++ b/web/themes/custom/mars/sass/_nav.sass
@@ -1,5 +1,5 @@
 .site-navigation
-  background-color: $lightOrange
+  background-color: $bright_red
   padding-top: 16px
   nav.nav-site-main
     margin-bottom: 0px !important
@@ -7,11 +7,11 @@
       margin-bottom: 0px !important
       li
         a 
-          color: #383838
+          color: $white
           margin: 0 15px
           font-size: 11px
       li:last-child 
-        background-color: $lightOrange
+        background-color: $bright_red
         // a.sub-menu
         //   color: $white
 
