--- a/web/themes/custom/mars/sass/_overrides.sass
+++ b/web/themes/custom/mars/sass/_overrides.sass
@@ -1,7 +1,7 @@
 .button
   color: $white
   border-radius: 0px
-  background-color: $orange
+  background-color: $dark_blue
   font-family: $gotham
   font-weight: 600
   font-size: 11px
@@ -15,7 +15,7 @@ input[type="button"],
 input[type="submit"],
 .action-link a,
 .action-link a:visited
-  background-color: $orange
+  background-color: $dark_blue
   color: $white
   border-radius: 0px
   cursor: pointer
@@ -23,20 +23,20 @@ input[type="submit"],
 a.button
   text-decoration: none
   &:hover, &:active, &:visited 
-    background-color: $orange
+    background-color: $dark_blue
     color: $white
     opacity: 1
   &.button-inverse
-    background-color: #383838
+    background-color: #grey
     &:hover, &:active, &:visited 
-      background-color: #383838
+      background-color: $grey
 
 img.no-stretch
   width: auto
 
 
 .main-page-content a 
-  color: $orange
+  color: $dark_red
   &.button
     color: $white
 
